# tapeapi-java

./: .gitignore  CMakeLists.txt  README.md
java/tapeapi/: MemOp.java  MtGet.java  MtOp.java  Mtio.java  SgApi.java
src-c/: mem_op.c  mt_get.c  mt_op.c  mtio.c  sg_api.c
